# RTSkippy

./: CMakeLists.txt  README.md
include/: Camera.h  EBO.h  Line.h  Shader.h  VAO.h  VBO.h
ressources/objects/: triangles.h
ressources/shaders/: default.vert
src/: EBO.cpp  Shader.cpp  VAO.cpp  VBO.cpp  main.cpp
